--- a/WebApplication6/HtmlPage1.html
+++ b/WebApplication6/HtmlPage1.html
@@ -13,5 +13,8 @@
     i am hari 
 
   this for demo work regarding source safe control
+
+
+    this is your kind information kindly check your source control
 </body>
 </html>
