--- a/WebApplication6/HtmlPage1.html
+++ b/WebApplication6/HtmlPage1.html
@@ -6,5 +6,5 @@
 <body>
     Hai Hello World this is hari
        changes done by karthi
-    Think Out of box</body>1
+    Think Out of box</body>
 </html>
